# Amp

./: ANALYSIS_SUMMARY.txt  DEEP_MONETIZATION_ANALYSIS.md  PORTFOLIO_REPORT.md  README.md  package-lock.json  package.json
projects/: 01-amp-repo.md  03-dnabot.md  (+61 more)
projects/AICouncil/: ATTRIBUTION.md  BLOCKCHAIN_NEURAL_PROJECT_SUMMARY.md  CHECKLIST.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DOCS_INDEX.md  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTION_ORDER_2_3_4_1.md  FINAL_STATUS.md  FULL_SYSTEM_OVERVIEW.md  GIT_PUSH_CONFIRMATION.md  IMPLEMENTATION_STATUS.md  INTEGRATION_QUICK_START.md  LICENSE  Makefile  NEURAL_ARCHITECTURE.md  NEURAL_DELIVERABLES.md  NEURAL_INTEGRATION_GUIDE.md  PHASE_1_LOCAL_TESTING.md  PHASE_2_CHECKLIST.md  PHASE_2_COMPLETION.md  PHASE_2_FINAL_SUMMARY.txt  PHASE_2_SUI_DEPLOYMENT.md  PHASE_3_INTEGRATION.md  PHASE_4_UI.md  QUICK_REFERENCE.md  README.md  README_INTEGRATION.txt  RUNNING_THE_SYSTEM.md  START_HERE.md  START_HERE_PHASES_2_3_4_1.md  SUMMARY.txt  SYSTEM_RUNDOWN.md  VERIFY_INTEGRATION.sh  WEBUI_COMPLETE.md  WHAT_WAS_DONE.md  demo_server.py  package-lock.json  package.json  (+5 more)
projects/AICouncil/apps/openwebui/: README.md  package.json  tsconfig.json  vite.config.js
projects/AICouncil/apps/web/: README.md  index.html  package.json  vite.config.ts
projects/AICouncil/contracts/: .env.example  Move.toml  neural_brain.move  package.json
projects/AICouncil/deploy/akash/: deploy.foundation.yaml
projects/AICouncil/deploy/docker/: docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
projects/AICouncil/docs/: ARCHITECTURE.md  COMMAND_CENTER_API.md  COMMAND_CENTER_IMPLEMENTATION.md  DEPLOYMENT.md  PHASE_3_PROVENANCE.md  PHASE_4_PRODUCTION.md  TESTING.md
projects/AICouncil/middleware/: rate_limiter.py  refusal.py
projects/AICouncil/services/anything-llm/: Dockerfile  package.json
projects/AICouncil/services/archiver/: archiver.py
projects/AICouncil/services/auth/: auth.py
projects/AICouncil/services/command-center/: Dockerfile  __init__.py  main.py  models.py  requirements.txt
projects/AICouncil/tests/: test_council_api.py
(+303 files in other folders)
